recursion.lessons.recursion.sierpinski.Sierpinski.scala.error
Sierpinski:3: error: ':' expected but ',' found.
def triforce(level,length){
                  ^Sierpinski:15: error: identifier expected but '}' found.
}
^